--- a/erptech_rcm/erptech_rcm/doctype/rcm_settings/rcm_settings.json
+++ b/erptech_rcm/erptech_rcm/doctype/rcm_settings/rcm_settings.json
@@ -7,16 +7,7 @@
     "field_order": [
         "weigh_scale_settings",
         "enable_weigh_scale",
-        "com_port_settings_tab",
-        "baud_rate",
-        "data_bits",
-        "parity",
-        "stop_bits",
-        "length_of_string",
-        "data_start_index",
-        "no_of_weight_digit",
-        "split_character",
-        "reverse_string"
+        "baud_rate"
     ],
     "fields": [
         {
@@ -31,11 +22,6 @@
             "label": "Enable Weigh Scale"
         },
         {
-            "fieldname": "com_port_settings_tab",
-            "fieldtype": "Tab Break",
-            "label": "COM Port Settings"
-        },
-        {
             "default": "9600",
             "fieldname": "baud_rate",
             "fieldtype": "Select",
@@ -43,51 +29,9 @@
             "options": "110\n300\n600\n1200\n2400\n4800\n9600\n14400\n19200\n28800\n38400\n56000\n57600\n115200\n128000\n256000"
         },
         {
-            "default": "8",
-            "fieldname": "data_bits",
-            "fieldtype": "Select",
-            "label": "Data bits",
-            "options": "Select\n5\n6\n7\n8"
-        },
-        {
-            "default": "none",
-            "fieldname": "parity",
-            "fieldtype": "Select",
-            "label": "Parity",
-            "options": "none\nodd\neven\nmark\nspace"
-        },
-        {
-            "default": "1",
-            "fieldname": "stop_bits",
-            "fieldtype": "Select",
-            "label": "Stop bits",
-            "options": "1\n1.5\n2"
-        },
-        {
-            "fieldname": "length_of_string",
-            "fieldtype": "Int",
-            "label": "Length of String"
-        },
-        {
-            "fieldname": "data_start_index",
-            "fieldtype": "Int",
-            "label": "Data Start index"
-        },
-        {
-            "fieldname": "no_of_weight_digit",
-            "fieldtype": "Int",
-            "label": "No of Weight digit"
-        },
-        {
             "fieldname": "split_character",
             "fieldtype": "Data",
             "label": "Split Character"
-        },
-        {
-            "default": "0",
-            "fieldname": "reverse_string",
-            "fieldtype": "Check",
-            "label": "Reverse String"
         }
     ],
     "index_web_pages_for_search": 1,
